fix issues with glass block and update Upstream to the latest version